# time-page

./: .gitignore  AGENTS.md  README.md  pyproject.toml
committee_builder/: __init__.py  cli.py  date_parsing.py  logging_config.py
committee_builder/commands/: add.py  add_minutes.py  build.py  import_csv.py  import_md.py  init.py  sources.py  validate.py
committee_builder/indico/: __init__.py  client.py  config.py  credentials.py  markdown.py
committee_builder/io/: normalize.py  paths.py  yaml_io.py
committee_builder/pipeline/: build_pipeline.py  date_range.py  validate_pipeline.py
committee_builder/render/: app.js.j2  markdown.py  styles.css  template.html.j2
committee_builder/schema/: models.py  validators.py
docs/: indico-plan.md
examples/: committee.example.html  committee.example.yaml
scripts/: Invoke-CommitteeBuild.ps1
tests/: conftest.py  test_add_event_cli.py  test_add_minutes_cli.py  test_build_cli.py  test_build_pipeline_orchestration.py  test_cli_help.py  test_date_range.py  test_indico_markdown.py  test_init_cli.py  test_markdown_math.py  test_mobile_layout_html.py  test_output_html.py  test_pytest_sandbox.py  test_schema_validation.py  test_sources_cli.py  test_timeline_state_html.py
